--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,14 @@ spockVersion=0.7-groovy-1.8
 jgitVersion=3.7.1.201504261725-r
 junitVersion=4.12
 cglibVersion=3.2.0
+
+SNAPSHOT_REPOSITORY_URL=http://nexus.vdian.net/repository/Android_Snapshots/
+RELEASE_REPOSITORY_URL=http://nexus.vdian.net/repository/Android_Releases/
+RELEASE_REPOSITORY_USERNAME=nexus-android
+RELEASE_REPOSITORY_PASSWORD=android
+SNAPSHOT_REPOSITORY_USERNAME=nexus-android
+SNAPSHOT_REPOSITORY_PASSWORD=android
+
+PROJECT_POM_GROUP=com.vdian.android.lib
+PROJECT_POM_ARTIFACT_ID=gradle-release
+PROJECT_POM_VERSION=1.0.0
