--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'nu.studer.plugindev'
 apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'net.researchgate.release'
 
-group='io.github.lizhangqu'
+group = 'io.github.lizhangqu'
 
 dependencies {
     testCompile("org.spockframework:spock-core:$spockVersion") { exclude group: 'org.codehaus.groovy' }
@@ -42,6 +42,7 @@ release {
     buildTasks = ['assemble']
     git {
         requireBranch = '(master|upstream-github/master|\\d+\\.\\d+)'
+        pushToRemote = 'upstream-github/master'
     }
 }
 
