--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ release {
     buildTasks = ['assemble']
     git {
         requireBranch = '(master|upstream-github/master|\\d+\\.\\d+)'
-        pushToRemote = 'upstream-github/master'
+        pushToRemote = 'upstream-github'
     }
 }
 
