--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.3.0'
         classpath 'nu.studer:gradle-plugindev-plugin:1.0.4'
         classpath 'org.codehaus.groovy:groovy-backports-compat23:2.4.6'
-        classpath 'net.researchgate:gradle-release:2.3.5'
+        classpath 'io.github.lizhangqu:core-publish:1.2.1'
     }
 }
 
@@ -14,9 +14,10 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'nu.studer.plugindev'
 apply plugin: 'com.jfrog.artifactory'
-apply plugin: 'net.researchgate.release'
+apply plugin: 'core.publish'
 
 group = 'io.github.lizhangqu'
+archivesBaseName = 'core-release'
 
 dependencies {
     testCompile("org.spockframework:spock-core:$spockVersion") { exclude group: 'org.codehaus.groovy' }
@@ -39,50 +40,10 @@ plugindev {
 }
 
 release {
-    buildTasks = ['assemble']
     git {
         requireBranch = '(master|upstream-github/master|\\d+\\.\\d+)'
         pushToRemote = 'upstream-github'
     }
 }
-
-bintray {
-    user = project.hasProperty('bintrayUser') ? bintrayUser : ''
-    key = project.hasProperty('bintrayApiKey') ? bintrayApiKey : ''
-    pkg {
-        repo = 'maven'
-        version {
-            gpg {
-                sign = false
-            }
-            mavenCentralSync {
-                sync = false
-                user = project.hasProperty('sonatypeUser') ? sonatypeUser : ''
-                password = project.hasProperty('sonatypePassword') ? sonatypePassword : ''
-            }
-        }
-    }
-    publish = false
-}
-
-artifactory {
-    contextUrl = 'https://oss.jfrog.org'
-    publish {
-        repository {
-            repoKey = 'oss-snapshot-local' //The Artifactory repository key to publish to
-            username = project.hasProperty('bintrayUser') ? bintrayUser : ''
-            password = project.hasProperty('bintrayApiKey') ? bintrayApiKey : ''
-        }
-        defaults {
-            publications 'plugin' // That is how it is named in plugindev plugin
-            properties = ['bintray.repo': 'gradle-plugins', 'bintray.package': 'gradle-release', 'bintray.version': version.toString()]
-        }
-    }
-    resolve {
-        repoKey = 'jcenter'
-    }
-}
-
-afterReleaseBuild.dependsOn bintrayUpload
 
 wrapper.gradleVersion = '1.12'
