--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ apply plugin: 'idea'
 //apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'core.publish'
 
+PROJECT_POM_GROUP_ID = 'io.github.lizhangqu'
 group = 'io.github.lizhangqu'
 archivesBaseName = 'core-release'
 
