--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ spockVersion=0.7-groovy-1.8
 jgitVersion=3.7.1.201504261725-r
 junitVersion=4.12
 cglibVersion=3.2.0
+
+PROJECT_POM_GROUP_ID=io.github.lizhangqu
+PROJECT_POM_ARTIFACT_ID=core-release
