* 发布脚本优化

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,9 @@
-version=2.7.0-SNAPSHOT
 # Dependency versions
 spockVersion=0.7-groovy-1.8
 jgitVersion=3.7.1.201504261725-r
 junitVersion=4.12
 cglibVersion=3.2.0
 
-SNAPSHOT_REPOSITORY_URL=http://nexus.vdian.net/repository/Android_Snapshots/
-RELEASE_REPOSITORY_URL=http://nexus.vdian.net/repository/Android_Releases/
-RELEASE_REPOSITORY_USERNAME=nexus-android
-RELEASE_REPOSITORY_PASSWORD=android
-SNAPSHOT_REPOSITORY_USERNAME=nexus-android
-SNAPSHOT_REPOSITORY_PASSWORD=android
-
-PROJECT_POM_GROUP=com.vdian.android.lib
-PROJECT_POM_ARTIFACT_ID=gradle-release
-PROJECT_POM_VERSION=1.0.4
+group=com.vdian.android.lib
+archivesBaseName=gradle-release
+version=1.0.4-SNAPSHOT
