--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.3.0'
-        classpath 'nu.studer:gradle-plugindev-plugin:1.0.4'
-        classpath 'org.codehaus.groovy:groovy-backports-compat23:2.4.6'
+//        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.3.0'
+//        classpath 'nu.studer:gradle-plugindev-plugin:1.0.4'
+//        classpath 'org.codehaus.groovy:groovy-backports-compat23:2.4.6'
         classpath('com.vdian.android.lib:gradle-publish:1.0.0-SNAPSHOT') {
             changing = true
         }
@@ -21,8 +21,8 @@ buildscript {
 
 apply plugin: 'groovy'
 apply plugin: 'idea'
-apply plugin: 'nu.studer.plugindev'
-apply plugin: 'com.jfrog.artifactory'
+//apply plugin: 'nu.studer.plugindev'
+//apply plugin: 'com.jfrog.artifactory'
 
 dependencies {
     testCompile("org.spockframework:spock-core:$spockVersion") { exclude group: 'org.codehaus.groovy' }
@@ -32,18 +32,18 @@ dependencies {
 }
 apply plugin: 'android.publish'
 
-plugindev {
-    pluginImplementationClass 'net.researchgate.release.ReleasePlugin'
-    pluginDescription 'gradle-release is a plugin for providing a Maven-like release process to project using Gradle.'
-    pluginLicenses 'MIT'
-    pluginTags 'gradle', 'plugin', 'release'
-    authorId 'danez'
-    authorName 'Daniel Tschinder'
-    authorEmail 'daniel.tschinder@researchgate.net'
-    projectUrl 'https://github.com/researchgate/gradle-release'
-    projectInceptionYear '2011'
-    done() // do not omit this
-}
+//plugindev {
+//    pluginImplementationClass 'net.researchgate.release.ReleasePlugin'
+//    pluginDescription 'gradle-release is a plugin for providing a Maven-like release process to project using Gradle.'
+//    pluginLicenses 'MIT'
+//    pluginTags 'gradle', 'plugin', 'release'
+//    authorId 'danez'
+//    authorName 'Daniel Tschinder'
+//    authorEmail 'daniel.tschinder@researchgate.net'
+//    projectUrl 'https://github.com/researchgate/gradle-release'
+//    projectInceptionYear '2011'
+//    done() // do not omit this
+//}
 
 
 //bintray {
