--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,12 @@ jgitVersion=3.7.1.201504261725-r
 junitVersion=4.12
 cglibVersion=3.2.0
 
-group=com.vdian.android.lib
-archivesBaseName=gradle-release
-version=1.0.5-SNAPSHOT
+#group=com.vdian.android.lib
+#archivesBaseName=gradle-release
+#version=1.0.5-SNAPSHOT
+
+#这个项目特殊，只能用这两个key
+PROJECT_POM_GROUP_ID=com.vdian.android.lib
+PROJECT_POM_ARTIFACT_ID=gradle-release
+#version不变
+version=1.0.6-SNAPSHOT
