--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Dependency versions
-spockVersion=0.7-groovy-1.8
+spockVersion=1.0-groovy-2.4
 jgitVersion=3.7.1.201504261725-r
 junitVersion=4.12
 cglibVersion=3.2.0
@@ -12,4 +12,4 @@ cglibVersion=3.2.0
 PROJECT_POM_GROUP_ID=com.vdian.android.lib
 PROJECT_POM_ARTIFACT_ID=gradle-release
 #version不变
-version=1.0.6.test-SNAPSHOT
+version=1.0.6-SNAPSHOT
