[Gradle Release Plugin] - pre tag commit:  'gradle-release/1.0.8'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,4 @@ cglibVersion=3.2.0
 PROJECT_POM_GROUP_ID=com.vdian.android.lib
 PROJECT_POM_ARTIFACT_ID=gradle-release
 #version不变
-version=1.0.8-SNAPSHOT
+version=1.0.8
