--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,5 @@ cglibVersion=3.2.0
 PROJECT_POM_GROUP_ID=com.vdian.android.lib
 PROJECT_POM_ARTIFACT_ID=gradle-release
 #version不变
-version=1.0.10-SNAPSHOT
+version=1.1.0
+###latest release version=1.1.0
